@@ -1,6 +1,7 @@
 	* Pass signals that should terminate to ssh
 	* Fix race around signal handling
 	* Report IPC errors to stderr
+	* Report if can't open -f password file (closes #3)
 
 Version 1.06
 	* Add -P for overriding the password prompt we search for
